@@ -140,6 +140,26 @@ class Base_AutoSearch {
 		}
 	}
 
+	function fullname(&$person, $inputname='fullname') {
+		$all_full=array();
+		foreach ($person->getAllNames() as $name) {
+			if ($name['surname']!='@N.N.') {
+				$all_full[]=htmlspecialchars(strip_tags($name['full']));
+			}
+		}
+		$all_full=array_unique($all_full);
+		if (count($all_full)==1) {
+			return '<input type="hidden" name="'.$inputname.'" value="'.$all_full[0].'">'.$all_full[0];
+		} else {
+			$html='<select name="'.$inputname.'">';
+			foreach ($all_full as $full) {
+				$html.='<option value="'.$full.'">'.$full.'</option>';
+			}
+			$html.='</select>';
+			return $html;
+		}
+	}
+
 	function fgivennames($person) {
 		$parents=$person->getPrimaryChildFamily();
 		if ($parents && $parents->getHusband()) {
@@ -148,13 +168,23 @@ class Base_AutoSearch {
 			return '<input type="hidden" name="fgivennames" value="">';
 		}
 	}
-
+	
 	function fsurname($person) {
 		$parents=$person->getPrimaryChildFamily();
 		if ($parents && $parents->getHusband()) {
 			return $this->surname($parents->getHusband(), 'fsurname');
 		} else {
 			return '<input type="hidden" name="fsurname" value="">';
+		}
+	}
+	
+	// Function added to get full name of father for Ancestry websites.
+	function ffullname($person) {
+		$parents=$person->getPrimaryChildFamily();
+		if ($parents && $parents->getHusband()) {
+			return $this->fullname($parents->getHusband(), 'ffullname');
+		} else {
+			return '<input type="hidden" name="ffullname" value="">';
 		}
 	}
 
@@ -175,6 +205,17 @@ class Base_AutoSearch {
 			return '<input type="hidden" name="msurname" value="">';
 		}
 	}
+	
+	// Function added to get full name of mother for Ancestry websites.
+	function mfullname($person) {
+		$parents=$person->getPrimaryChildFamily();
+		if ($parents->getWife()) {
+			return $this->fullname($parents->getWife(), 'mfullname');
+		} else {
+			return '<input type="hidden" name="mfullname" value="">';
+		}
+	}
+
 	function sgivennames($person) {
 		$spouse=$person->getCurrentSpouse();
 		if ($spouse) {
@@ -190,6 +231,16 @@ class Base_AutoSearch {
 			return $this->surname($spouse, 'ssurname');
 		} else {
 			return '<input type="hidden" name="ssurname" value="">';
+		}
+	}
+
+	// Function added to get full name of spouse for Ancestry websites.
+	function sfullname($person) {
+		$spouse=$person->getCurrentSpouse();
+		if ($spouse) {
+			return $this->fullname($spouse, 'sfullname');
+		} else {
+			return '<input type="hidden" name="sfullname" value="">';
 		}
 	}
 
